Fix install dependencies, new tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = exoanalyzer-fellis
-version = 0.0.141
+version = 0.0.15
 author = Finn Ellis
 author_email = xfinnellisx@gmail.com
 description = Tool for processing and visualizing exoplanet data.
@@ -18,6 +18,10 @@ classifiers =
 package_dir =
     = src
 packages = find:
+install_requires=
+    pyvo
+    matplotlib
+    numpy
 python_requires = >=3.8
 
 [options.packages.find]
