--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,6 @@
 [build-system]
 requires = [
     "setuptools>=42",
-    "wheel",
-    "pyvo",
-    "matplotlib",
-    "numpy"
+    "wheel"
 ]
 build-backend = "setuptools.build_meta"
